[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claude-cost-py"
version = "0.1.0"
description = "Compute the USD cost of a Claude API call from its usage block. Cache-aware, Bedrock-aware (versioned IDs, inference profiles, ARNs), zero dependencies. Python port of the claude-cost Rust crate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "anthropic",
  "claude",
  "bedrock",
  "cost",
  "pricing",
  "llm",
  "ai",
  "prompt-caching",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/claude-cost-py"
Issues = "https://github.com/MukundaKatta/claude-cost-py/issues"
Source = "https://github.com/MukundaKatta/claude-cost-py"
"Rust sibling" = "https://crates.io/crates/claude-cost"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cost"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
